gitops/apps/envoy-gateway-resources/httproute-falco.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: falco-ui
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - "falco.homelab.local"
  rules:
  - backendRefs:
    - name: falco-falcosidekick-ui
      namespace: falco
      port: 2802
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: falco-backend
  namespace: falco
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: envoy-gateway-system
  to:
  - group: ""
    kind: Service
    name: falco-falcosidekick-ui
